second attempt to fix hight issue on mobile

--- a/src/swipe_board/swipe_board.scss
+++ b/src/swipe_board/swipe_board.scss
@@ -38,7 +38,7 @@
 
                 img {
                     width: 100%;
-                    height: auto;
+                    height: 100%;
                     object-fit: cover;
                 }
             }
